--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,7 +1,10 @@
 name: run-tests
 
 on:
+  pull_request:
+    branches: [main]
   push:
+    branches: [dev, main]
     paths:
       - '**.php'
       - '.github/workflows/run-tests.yml'
