dev: update run-tests.yml for running test action

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,7 +1,14 @@
 name: run-tests
 
 on:
+  pull_request:
+    branches:
+      - main
+      - dev
   push:
+    branches:
+      - dev
+      - main
     paths:
       - '**.php'
       - '.github/workflows/run-tests.yml'
