--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -23,8 +23,11 @@ jobs:
         stability: [prefer-stable]
         include:
           - laravel: 12.*
+            testbench: 10.*
           - laravel: 11.*
+            testbench: 9.*
           - laravel: 10.*
+            testbench: 8.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
